implement elixi.re (#5)
* implement elixi.re

* fix what needs to be fixed.

* Fix the bug where elixire settings appear on all settings pages

* Fix capitalization on elixi.re

--- a/web/settings.css
+++ b/web/settings.css
@@ -25,6 +25,8 @@ html, body {
 .owo .owo_only { display: inline; }
 .nothingdomains_only { display: none; }
 .nothingdomains .nothingdomains_only { display: inline; }
+.elixire_only { display: none; }
+.elixire .elixire_only { display: inline; }
 
 .form-group {
   margin-bottom: 0.5rem;
