Add kuvien support (Closes #7) (#8)
* Prettify and add kuvien

* Fix tigcap not setting kuvien api key header

* Fix kuvien uploader

--- a/web/settings.css
+++ b/web/settings.css
@@ -27,6 +27,9 @@ html, body {
 .nothingdomains .nothingdomains_only { display: inline; }
 .elixire_only { display: none; }
 .elixire .elixire_only { display: inline; }
+.kuvien_only { display: none; }
+.kuvien .kuvien_only { display: inline; }
+
 
 .form-group {
   margin-bottom: 0.5rem;
